fix : navbar collapse

--- a/src/main.css
+++ b/src/main.css
@@ -7,7 +7,8 @@
   :root {
     --radius: 0.5rem;
     --header-height: 3rem;
-    --sidebar-width: 18rem;
+    --navbar-width: 18rem;
+    --mini-navbar-width: 3.5rem;
   }
 
   :root[data-screen-mode="light"] {
@@ -68,12 +69,6 @@
     --border: 217.2 32.6% 17.5%;
     --input: 217.2 32.6% 17.5%;
     --ring: 212.7 26.8% 83.9%;
-  }
-
-  @media (min-width: 768px) {
-    :root {
-      --header-height: 4rem;
-    }
   }
 }
 
